    use tabs but use spaces for formatting
  * accompany each entry with github issue/PR number (Issue #xyz)
  * release numbers follow "Semantic Versioning" http://semver.org

------------------------------------------------------------------------------
??/??/16 kain88-de, fiona-naughton, richardjgowers, tyler.je.reddy, jdetle
         euhruska, orbeckst

  * 0.15.1

Enhancements

  * All classes derived from 'AnalysisBase' now display a ProgressMeter
  with 'quiet=False'
  * The 'run' method from all 'AnalysisBase' derived classes return the
  class itself.
  * Added boolean flag at lib.distances.USED_OPENMP to reveal if
    OpenMP was used in compilation (Issue #883)

Fixes
  * GROWriter resids now truncated properly (Issue #886)
  * reading/writing lambda value in trr files (Issue #859)
  * fix __iter__/next redundancy (Issue #869)
  * SingleFrameReader now raises StopIteration instead of IOError on calling
    next (Issue #869)
  * Display of Deprecation warnings doesn't affect other modules anymore (Issue #754)
  * Changed nframes to n_frames in analysis modules for consistency (Issue #890)
  * fixed incompatibility with newer matplotlib in analysis.hole
  * Fixed modules that improperly documented and/or used frame slicing
    defaults (#914)
  * Fixed same interRDF can be run twice (Issue #924)
Changes
  * Added protected variable _frame_index to to keep track of frame iteration
    number in AnalysisBase
  * Added new AlignTraj class for alignment that follows the new analysis API known
    as Bauhaus style. (Issue #845)
  * Added new diffusionmap module for dimension reduction that follows the
    Bauhaus API. (Issue #857)

Deprecations (Issue #599)
  * Use of rms_fit_trj deprecated in favor of AlignTraj class (Issue #845)

05/15/16 jandom, abhinavgupta94, orbeckst, kain88-de, hainm, jbarnoud,
         dotsdl, richardjgowers, BartBruininks, jdetle

  * 0.15.0

Metadata

  * link download_url to GitHub releases so that Depsy recognizes