@@ -69,6 +69,7 @@ Chronological list of authors
   - Abhinav Gupta
   - Pedro Reis
   - Fiona B. Naughton
+  - Robert Delgado
 
 
 External code
